--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -10,29 +10,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy.stats import binned_statistic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup, set_axs_configuration\n",
-    "from auriga.settings import Settings"
+    "from auriga.settings import Settings\n",
+    "from auriga.parser import parse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_bins = 14\n",
+    "age_range = (0, 14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +144,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_median_metal_of_sample(simulations: list):\n",
+    "    \"\"\"\n",
+    "    This method calculates the median metallicity of the sample using in\n",
+    "    stellar age bins.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    simulations : list\n",
+    "        A list of simulations to plot.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    ages = []\n",
+    "    metallicities = []\n",
+    "    for simulation in simulations:\n",
+    "        age, fe_to_h = read_data(simulation=simulation)\n",
+    "        ages += list(age)\n",
+    "        metallicities += list(fe_to_h)\n",
+    "    \n",
+    "    stat, bin_edges, _ = binned_statistic(\n",
+    "        x=ages,\n",
+    "        values=metallicities,\n",
+    "        statistic=np.nanmedian,\n",
+    "        bins=n_bins,\n",
+    "        range=age_range\n",
+    "    )\n",
+    "    bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
+    "\n",
+    "    return bin_centers, stat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,17 +204,28 @@
     "                            range=[ax.get_xlim(), ax.get_ylim()],\n",
     "                            norm=mcolors.LogNorm(vmin=1E0, vmax=1E3),\n",
     "                            rasterized=True)\n",
+    "    stat, bin_edges, _ = binned_statistic(\n",
+    "        x=age,\n",
+    "        values=fe_to_h,\n",
+    "        statistic=np.nanmedian,\n",
+    "        bins=n_bins,\n",
+    "        range=age_range\n",
+    "    )\n",
+    "    bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
+    "    ax.plot(bin_centers, stat)\n",
     "    ax.text(x=0.05,\n",
     "            y=0.95,\n",
     "            s=r\"$\\texttt{\" + simulation.upper() + \"}$\",\n",
     "            size=6.0, transform=ax.transAxes,\n",
     "            ha='left', va='top',\n",
-    "            )"
+    "            )\n",
+    "    \n",
+    "    return bin_centers, stat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,25 +250,37 @@
     "    axs = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
     "    set_axs_configuration(\n",
-    "        xlim=(0, 14), ylim=(-4, 3),\n",
+    "        xlim=age_range, ylim=(-4, 3),\n",
     "        xticks=[2, 4, 6, 8, 10, 12], yticks=[-3, -2, -1, 0, 1, 2],\n",
     "        xlabel=\"Age [Gyr]\", ylabel=\"[Fe/H]\",\n",
     "        axs=axs, n_used=n_simulations)\n",
     "\n",
+    "    # Add the median of the sample in each panel\n",
+    "    bin_centers, sample_median = calc_median_metal_of_sample(simulations)\n",
+    "    \n",
     "    for idx, ax in enumerate(axs.flat):\n",
     "        if idx < n_simulations:\n",
-    "            add_panel_for_galaxy(simulations[idx], ax=ax)\n",
+    "            _, stat = add_panel_for_galaxy(simulations[idx], ax=ax)\n",
+    "            ax.plot(bin_centers, sample_median, c='k', ls=\"--\")\n",
+    "            mse = ((stat - sample_median)**2).sum() / stat.shape[0]\n",
+    "            ax.text(x=0.05,\n",
+    "                y=0.05,\n",
+    "                s=r\"$\\mathrm{MSE} = \" \\\n",
+    "                    + str(np.round(mse, 3)).ljust(5, '0') + \"$\",\n",
+    "                size=6.0, transform=ax.transAxes,\n",
+    "                ha='left', va='bottom',\n",
+    "            )\n",
     "        else:\n",
     "            ax.axis(\"off\")\n",
     "\n",
-    "    for ext in [\"pdf\", \"png\"]:\n",
-    "        fig.savefig(f\"../images/age_metallicity/{filename}.{ext}\")\n",
+    "        fig.savefig(f\"../images/age_metallicity/{filename}.pdf\")\n",
+    "\n",
     "    plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,10 +288,8 @@
     "# settings = Settings()\n",
     "# originals = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]\n",
     "# reruns = [f\"au{i}_re_l4_s251\" for i in settings.reruns]\n",
-    "# plot_age_metal_rel_for_sample(simulations=originals,\n",
-    "#                               filename=\"originals_s127\")\n",
-    "# plot_age_metal_rel_for_sample(simulations=reruns,\n",
-    "#                               filename=\"reruns_s251\")"
+    "# plot_age_metal_rel_for_sample(simulations=originals, filename=\"originals_s127\")\n",
+    "# plot_age_metal_rel_for_sample(simulations=reruns, filename=\"reruns_s251\")"
    ]
   },
   {
@@ -233,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,9 +317,39 @@
     "        The simulation to plot.\n",
     "    \"\"\"\n",
     "\n",
+    "    settings = Settings()\n",
+    "\n",
     "    fig = plt.figure(figsize=(7.4, 2.0))\n",
     "    gs = fig.add_gridspec(nrows=1, ncols=4, hspace=0.0, wspace=0.0)\n",
     "    axs = gs.subplots(sharex=True, sharey=True)\n",
+    "\n",
+    "    _, rerun, resolution, snapshot = parse(simulation)\n",
+    "\n",
+    "    # Median for all galaxies\n",
+    "    ages = []\n",
+    "    abundances = []\n",
+    "    region_tags = []\n",
+    "    galaxies = settings.reruns if rerun else settings.galaxies\n",
+    "    rerun_txt = \"re\" if rerun else \"or\"\n",
+    "    for galaxy in galaxies:\n",
+    "        age, metal_ab, region_tag = read_data_with_region(\n",
+    "            simulation=f\"au{galaxy}_{rerun_txt}_l{resolution}_s{snapshot}\")\n",
+    "        ages += list(age)\n",
+    "        abundances += list(metal_ab)\n",
+    "        region_tags += list(region_tag)\n",
+    "    ages = np.array(ages)\n",
+    "    abundances = np.array(abundances)\n",
+    "    region_tags = np.array(region_tags)\n",
+    "    sample_data = []\n",
+    "    for i in settings.component_tags.values():\n",
+    "        stat, _, _ = binned_statistic(\n",
+    "            x=ages[region_tags == i],\n",
+    "            values=abundances[region_tags == i],\n",
+    "            statistic=np.nanmedian,\n",
+    "            bins=n_bins,\n",
+    "            range=age_range\n",
+    "        )\n",
+    "        sample_data.append(stat)\n",
     "\n",
     "    for ax in axs.flat:\n",
     "        ax.tick_params(which='both', direction=\"in\")\n",
@@ -294,6 +393,27 @@
     "                      np.nanmedian(metal_ab[is_region]),\n",
     "                     marker='o', mfc='k', ms=2, mew=0)\n",
     "\n",
+    "        stat, bin_edges, _ = binned_statistic(\n",
+    "            x=age[is_region],\n",
+    "            values=metal_ab[is_region],\n",
+    "            statistic=np.nanmedian,\n",
+    "            bins=n_bins,\n",
+    "            range=age_range\n",
+    "        )\n",
+    "        bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
+    "        axs[idx].plot(bin_centers, stat, c='b', ls='-')\n",
+    "\n",
+    "        axs[idx].plot(bin_centers, sample_data[idx], c='k', ls=\"--\")\n",
+    "\n",
+    "        mse = ((stat - sample_data[idx])**2).sum() / stat.shape[0]\n",
+    "        axs[idx].text(\n",
+    "            x=0.05,\n",
+    "            y=0.95,\n",
+    "            s=\"$\\mathrm{MSE} = \" + str(np.round(mse, 3)).ljust(5, '0') + \"$\",\n",
+    "            size=8.0, transform=axs[idx].transAxes,\n",
+    "            ha='left', va='top',\n",
+    "            )\n",
+    "\n",
     "    cbar = fig.colorbar(im, ax=axs[-1], orientation='vertical',\n",
     "                        label=r'$N_\\mathrm{stars}$',\n",
     "                        pad=0)\n",
@@ -312,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,6 +441,13 @@
     "    if galaxy in settings.reruns:\n",
     "        plot_age_metal_rel_by_region_for_galaxy(f\"au{galaxy}_re_l4_s251\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
