Add MSE scatter plot.

--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -10,19 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
     "import numpy as np\n",
-    "from scipy.stats import binned_statistic"
+    "from scipy.stats import binned_statistic\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Age-Metallicity for All Subhalo Stars"
+    "### Age-Metallicity for All Subhalo Stars"
    ]
   },
   {
@@ -297,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Age-Metallicity by Region"
+    "### Age-Metallicity by Region"
    ]
   },
   {
@@ -443,11 +444,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MSE Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.DataFrame()\n",
+    "df[\"Galaxy\"] = [f\"Au{i}\" for i in range(1, 31)]\n",
+    "df[\"MSE\"] = [0.033, 0.006, 0.019, 0.057, 0.004, 0.002, 0.061, 0.007, 0.012, 0.003, 0.043, 0.016, 0.009, 0.003, 0.099, 0.013, 0.039, 0.017, 0.032, 0.020, 0.009, 0.035, 0.010, 0.013, 0.006, 0.024, 0.007, 0.008, 0.034, 0.040]\n",
+    "df[\"MSE_H\"] = [0.035, 0.065, 0.062, 0.021, 0.033, 0.042, 0.038, 0.048, 0.073, 0.023, 0.017, 0.013, 0.013, 0.010, 0.081, 0.035, 0.068, 0.071, 0.029, 0.027, 0.016, 0.039, 0.073, 0.104, 0.062, 0.044, 0.056, 0.041, 0.062, 0.031]\n",
+    "df[\"MSE_B\"] = [0.019, 0.044, 0.020, 0.065, 0.016, 0.060, 0.054, 0.027, 0.004, 0.002, 0.048, 0.041, 0.002, 0.012, 0.167, 0.066, 0.028, 0.030, 0.057, 0.017, 0.026, 0.051, 0.014, 0.032, 0.024, 0.018, 0.032, 0.004, 0.025, 0.033]\n",
+    "df[\"MSE_CD\"] = [0.051, 0.006, 0.011, 0.039, 0.010, 0.002, 0.064, 0.011, 0.009, 0.002, 0.045, 0.017, 0.002, 0.007, 0.085, 0.005, 0.016, 0.017, 0.042, 0.026, 0.006, 0.015, 0.004, 0.008, 0.007, 0.012, 0.004, 0.004, 0.040, 0.015]\n",
+    "df[\"MSE_WD\"] = [0.053, 0.026, 0.032, 0.048, 0.014, 0.037, 0.076, 0.034, 0.017, 0.003, 0.047, 0.014, 0.004, 0.010, 0.106, 0.018, 0.024, 0.031, 0.053, 0.036, 0.010, 0.027, 0.041, 0.028, 0.022, 0.017, 0.029, 0.008, 0.026, 0.029]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors = np.array([\"tab:blue\"] * 30)\n",
+    "colors[np.array(settings.groups[\"NotMilkyWayLike\"]) - 1] = \"tab:red\"\n",
+    "colors[np.array(settings.groups[\"Excluded\"]) - 1] = \"tab:gray\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(figsize=(7.4, 2.0), ncols=4, \n",
+    "                        gridspec_kw={\"wspace\": 0.0})\n",
+    "\n",
+    "for ax in axs.flatten():\n",
+    "    ax.set_xlim(0, 0.12)\n",
+    "    ax.set_ylim(0, 0.12)\n",
+    "    ax.set_xticks([0.02, 0.04, 0.06, 0.08, 0.10])\n",
+    "    ax.set_xlabel(r\"$\\mathrm{MSE}$\")\n",
+    "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
+    "    ax.set_ylabel(r\"$\\mathrm{MSE}_\\mathrm{Component}$\")\n",
+    "    ax.label_outer()\n",
+    "\n",
+    "axs[0].scatter(df[\"MSE\"], df[f\"MSE_H\"], zorder=10, c=colors, ls='-',\n",
+    "               s=20, linewidths=0.5, edgecolors=\"white\")\n",
+    "axs[1].scatter(df[\"MSE\"], df[f\"MSE_B\"], zorder=10, c=colors, ls='-',\n",
+    "               s=20, linewidths=0.5, edgecolors=\"white\")\n",
+    "axs[2].scatter(df[\"MSE\"], df[f\"MSE_CD\"], zorder=10, c=colors, ls='-',\n",
+    "               s=20, linewidths=0.5, edgecolors=\"white\")\n",
+    "axs[3].scatter(df[\"MSE\"], df[f\"MSE_WD\"], zorder=10, c=colors, ls='-',\n",
+    "               s=20, linewidths=0.5, edgecolors=\"white\")\n",
+    "\n",
+    "for i, comp in enumerate(settings.components):\n",
+    "    axs[i].text(x=0.5, y=0.95,\n",
+    "                s=settings.component_labels[comp],\n",
+    "                size=8.0, transform=axs[i].transAxes,\n",
+    "                ha='center', va='top')\n",
+    "\n",
+    "fig.savefig(f\"../images/age_metallicity_by_region/mse_analysis.pdf\")\n",
+    "plt.close(fig)"
+   ]
   }
  ],
  "metadata": {
