--- a/scripts/Metallicity Profiles (Lian+2023).ipynb
+++ b/scripts/Metallicity Profiles (Lian+2023).ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,18 +212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "dfg = pd.read_csv(\"../data/grand_2017.csv\")\n",
     "mw_effective_radius_min = 3.4\n",
-    "mw_effective_radius_max = 6.7"
+    "mw_effective_radius_max = 6.7\n",
+    "mw_effective_radius_mean = (mw_effective_radius_min \\\n",
+    "    + mw_effective_radius_max) / 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,8 +235,6 @@
     "ax.set_ylim(-0.6, 0.6)\n",
     "ax.set_xlabel(r\"$r_{xy}$ [$R_\\mathrm{eff}$]\")\n",
     "ax.set_ylabel(r\"$\\left< \\mathrm{[Fe/H]} \\right>$\")\n",
-    "\n",
-    "ax.grid(True, ls='-', lw=0.25, c='silver')\n",
     "\n",
     "# Weighted profile for all galaxies\n",
     "for galaxy in settings.galaxies:\n",
@@ -256,15 +256,19 @@
     "        label=r\"$\\texttt{\" + f\"au6_or_l4_s127\".upper() + \"}$\")\n",
     "\n",
     "# Experimental data\n",
-    "ax.errorbar(df_exp[\"radius\"] / mw_effective_radius_min, df_exp[\"total\"],\n",
+    "x1 = df_exp[\"radius\"] / mw_effective_radius_min\n",
+    "x_mean = df_exp[\"radius\"] / mw_effective_radius_mean\n",
+    "x2 = df_exp[\"radius\"] / mw_effective_radius_max\n",
+    "ax.errorbar(x_mean, df_exp[\"total\"],\n",
     "            yerr=df_exp[\"total_err\"],\n",
     "            fmt=\"-o\", capthick=0, color=\"tab:red\", markersize=2.5,\n",
     "            markeredgecolor=\"tab:red\", zorder=10, label=\"Lian+2023\",\n",
     "            lw=0.7)\n",
-    "ax.errorbar(df_exp[\"radius\"] / mw_effective_radius_max, df_exp[\"total\"],\n",
-    "            yerr=df_exp[\"total_err\"],\n",
-    "            fmt=\"-o\", capthick=0, color=\"tab:red\", markersize=2.5,\n",
-    "            markeredgecolor=\"tab:red\", zorder=10, lw=0.7)\n",
+    "ax.fill_betweenx(y=df_exp[\"total\"].to_numpy()[-9:],\n",
+    "                  x1=x1.to_numpy()[-9:], x2=x2.to_numpy()[-9:],\n",
+    "                  interpolate=True, color=\"#f3bfbf\")\n",
+    "ax.fill_betweenx(y=df_exp[\"total\"], x1=x1, x2=x2,\n",
+    "                 interpolate=True, color=\"#f3bfbf\")\n",
     "\n",
     "ax.legend(loc=\"upper right\", framealpha=0.0, fontsize=8.0)\n",
     "\n",
