--- a/scripts/Stellar Velocity.ipynb
+++ b/scripts/Stellar Velocity.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,14 +408,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/ipykernel_launcher.py:63: RuntimeWarning: Mean of empty slice\n"
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/ipykernel_launcher.py:66: RuntimeWarning: Mean of empty slice\n"
      ]
     }
    ],
@@ -443,34 +443,37 @@
     "axs[3, 0].set_ylabel(r'$\\sigma_v$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
     "\n",
     "for simulation in originals:\n",
+    "    c, label, zorder = \"gainsboro\", None, 10\n",
+    "    if simulation == \"au11_or_l4_s127\":\n",
+    "        c, label, zorder = \"tab:purple\", r\"$\\texttt{AU11_OR_L4_S127}$\", 11\n",
     "    for component, idx in settings.component_tags.items():\n",
     "        is_finite = np.isfinite(\n",
     "            data[f\"{simulation.upper()}_RadialVelocity_{component}_km/s\"])\n",
     "        axs[0, idx].plot(\n",
     "            data[\"BinCenters_ckpc\"][is_finite],\n",
     "            data[f\"{simulation.upper()}_RadialVelocity_{component}_km/s\"][\n",
-    "                is_finite], lw=0.75, zorder=10, c=\"gainsboro\")\n",
+    "                is_finite], lw=0.75, zorder=zorder, c=c, label=label)\n",
     "\n",
     "        is_finite = np.isfinite(\n",
     "            data[f\"{simulation.upper()}_VerticalVelocity_{component}_km/s\"])\n",
     "        axs[1, idx].plot(\n",
     "            data[\"BinCenters_ckpc\"][is_finite],\n",
     "            data[f\"{simulation.upper()}_VerticalVelocity_{component}_km/s\"][\n",
-    "                is_finite], lw=0.75, zorder=10, c=\"gainsboro\")\n",
+    "                is_finite], lw=0.75, zorder=zorder, c=c, label=label)\n",
     "\n",
     "        is_finite = np.isfinite(\n",
     "            data[f\"{simulation.upper()}_TangentialVelocity_{component}_km/s\"])\n",
     "        axs[2, idx].plot(\n",
     "            data[\"BinCenters_ckpc\"][is_finite],\n",
     "            data[f\"{simulation.upper()}_TangentialVelocity_{component}_km/s\"][\n",
-    "                is_finite], lw=0.75, zorder=10, c=\"gainsboro\")\n",
+    "                is_finite], lw=0.75, zorder=zorder, c=c, label=label)\n",
     "\n",
     "        is_finite = np.isfinite(\n",
     "            data[f\"{simulation.upper()}_VelocityDispersion_{component}_km/s\"])\n",
     "        axs[3, idx].plot(\n",
     "            data[\"BinCenters_ckpc\"][is_finite],\n",
     "            data[f\"{simulation.upper()}_VelocityDispersion_{component}_km/s\"][\n",
-    "                is_finite], lw=0.75, zorder=10, c=\"gainsboro\")\n",
+    "                is_finite], lw=0.75, zorder=zorder, c=c, label=label)\n",
     "\n",
     "features = [\"RadialVelocity\", \"VerticalVelocity\",\n",
     "            \"TangentialVelocity\", \"VelocityDispersion\"]\n",
@@ -483,7 +486,9 @@
     "        axs[i, j].plot(\n",
     "            data[\"BinCenters_ckpc\"],\n",
     "            np.nanmean(data[[f\"{simulation.upper()}_{feature}_{component}_km/s\" for simulation in originals]], axis=1),\n",
-    "            lw=1.25, zorder=15, c=settings.component_colors[component])\n",
+    "            lw=1.25, zorder=15, c='k')\n",
+    "\n",
+    "axs[1, 0].legend(loc=\"upper right\", framealpha=0, fontsize=6.0)\n",
     "\n",
     "fig.savefig(f\"../images/stellar_velocities_by_region/originals_average.pdf\")\n",
     "plt.close(fig)"
